<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">CALCULATOR</string>
    <string name="rm_cm">RM/CM</string>
    <string name="cl">CL</string>
    <string name="memory_plus">M+=</string>
    <string name="inverter">+/-</string>
    <string name="memory_minus">M-=</string>
    <string name="equal">=</string>
    <string name="clear_all">CA</string>
    <string name="double_zero">00</string>
    <string name="multiply">×</string>
    <string name="decimal">.</string>
    <string name="divide">÷</string>
    <string name="square_root">√</string>
    <string name="backspace">→</string>
    <string name="zero">0</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
